gcc/testsuite/g++.old-deja/g++.other/crash31.C
// { dg-do assemble }
// Origin: Jakub Jelinek <jakub@redhat.com>

namespace bar
{
struct foo
{
  foo();
};
// { dg-error "-:expected" "" { target *-*-* } .+1 }
